CMBSandbox4/src/objects/Bank__c.object
<CustomObject>
    <fields>
        <fullName>API_Exposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Exposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Contact_Email__c</fullName>
        <label>Bank Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bank_Contact_Name__c</fullName>
        <label>Bank Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Contact_Phone__c</fullName>
        <label>Bank Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_Contact_Title__c</fullName>
        <description>Enter the title of the contact person</description>
        <inlineHelpText>Enter the title of the contact person</inlineHelpText>
        <label>Bank Contact Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Id__c</fullName>
        <displayFormat>B-{000000}</displayFormat>
        <label>Bank Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bank_Intake_URL__c</fullName>
        <formula>&quot;http://cmb.force.com/bankdirectory/BankIntakeHome?ID=&quot; &amp; Id &amp;&quot;&amp;email=&quot; &amp;  Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Intake URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Timestamp__c</fullName>
        <label>Email Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <formula>VALUE(String_Index__c) - 200</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Status__c</fullName>
        <label>Internal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted - Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted - Promised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Completed!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password_Generator__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>Password Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Bank Password</description>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Welcome_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Checkbox triggers the welcome email for new Banks</description>
        <label>Send Welcome Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>String_Index__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>String Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Bank</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Rating__c</columns>
        <columns>Send_Welcome_Email__c</columns>
        <columns>Email_Timestamp__c</columns>
        <columns>Internal_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>